# semp

./: .gitignore  README.md  pyproject.toml
projects/sr/: 1.prep.py  2.src.py  helpers.py  pathfinder.py  static_analysis.py
projects/sr/fmri_prep/: .nfs00000000003b641d00000049  CLAUDE.md  config.sh  design_preproc.fsf  run_melodic.sh  run_regfilt.sh  run_t1.sh  t1_combine_exclude.txt
projects/sr/fmri_prep_bmrc/: config.py  design_preproc.fsf  run_fmri.py  run_t1.py
projects/template/: 1.prep.ipynb
projects/wmt/: helpers.py
scripts/sts/: 1.prep_sts.py  2.src_sts.py  3.sign_flip_sts.py  4.hmm_sts.py
src/semp/: __init__.py
src/semp/eeg/: __init__.py  extension.py  helpers.py  metric.py  prep_wrappers.py  src_wrappers.py
src/semp/utils/: __init__.py  io.py  logger.py  metric.py  osle_expansion.py  pathfinder.py  util.py
src/semp/visualize/: __init__.py  statistics.py  visualize.py
tests/: test_base_pathfinder.py
utils/: eeg.py  prep_wrappers.py  visualize.py
utils/pathfinder/: irene.py
